@startuml diagramme-classes-item

!define ABSTRACT class

abstract class Sprite {
  - imgFile : String
  - img : Image
  + Sprite(s : String)
  + setImg(img : String) : void
  + getImg() : Image
}

abstract class Item {
  - name : String
  - type : TypeItem
  + Item(name : String, img : String, type : TypeItem)
  + getName() : String
  + getType() : TypeItem
  + toString() : String
}


enum TypeItem {
  OBJET
  ARME
}

class Amulette {
  + Amulette()
}

class Epee {
  + Epee()
}



class Player {
  + Player(dx : int, dy : int, maxHp : double, degat : double)

  + setInventory(inventory : ArrayList<Item>) : void
  + getInventory() : ArrayList<Item>

  + possedeItem(nomItem : String) : boolean
}

Item --|> Sprite 
Amulette --|> Item 
Epee --|> Item 

Item --> TypeItem : utilise

Player --> Item : inventory\n0..*

@enduml
